<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_warning"
        android:textColor="@color/color_default"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?actionBarDivider"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message_warning"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color_default"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/text_bottom_warning"
        android:textSize="18sp"/>

</LinearLayout>